# Assignment4

./: Assignment4.cpp  CMakeLists.txt  ImageData.h  Pixel.h  ReadImage.h
GUI/: CMakeLists.txt  Graph.h
